--- a/wp-content/themes/HireImmigrants/sass/hire-immigrants.scss
+++ b/wp-content/themes/HireImmigrants/sass/hire-immigrants.scss
@@ -43,4 +43,5 @@
 @import "component/spotlights";
 @import "component/category-grid";
 @import "component/explore-highlights";
+@import "component/newsletter";
 // Trumps -- Overrides and helper classes
