--- a/wp-content/themes/HireImmigrants/sass/object/_header.scss
+++ b/wp-content/themes/HireImmigrants/sass/object/_header.scss
@@ -10,6 +10,7 @@ header{
 			color: $mine-shaft;
 			line-height: 55px;
 			font-size: 20px;
+			font-family: $truenoReg;
 
 			.ico{
 				height: 55px;
