--- a/wp-content/themes/HireImmigrants/sass/settings/_colours.scss
+++ b/wp-content/themes/HireImmigrants/sass/settings/_colours.scss
@@ -11,6 +11,7 @@ $gray: #828282;
 $mine-shaft: #313131;
 $polar: #f6fdfc;
 $rajah: #f8c166;
+$riptide: #86e2d5;
 $tundora: #4a4a4a;
 $victoria: #4a4b9b;
 $water-leaf: #a9ebe1;
