--- a/wp-content/themes/HireImmigrants/sass/settings/_fonts.scss
+++ b/wp-content/themes/HireImmigrants/sass/settings/_fonts.scss
@@ -1,3 +1,4 @@
+$georgia: Georgia, Times, "Times New Roman", serif;
 $truenoBlack: 'TruenoBlack';
 $truenoBold: 'TruenoBold';
 $truenoExtraBold: 'TruenoExtraBold';
