--- a/wp-content/themes/HireImmigrants/sass/settings/_typography.scss
+++ b/wp-content/themes/HireImmigrants/sass/settings/_typography.scss
@@ -8,7 +8,7 @@ h1{
 
 }
 h2{
-
+	font-size: 40px;
 }
 h3{
 
@@ -21,7 +21,6 @@ h5{
 }
 h6{
 	font-size: 22px;
-	font-family: $truenoSemiBold;
 }
 p{
 
