--- a/wp-content/themes/HireImmigrants/css/hire-immigrants.css
+++ b/wp-content/themes/HireImmigrants/css/hire-immigrants.css
@@ -1,9 +1,11 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: "TruenoSemiBold"; }
 
+h2 {
+  font-size: 40px; }
+
 h6 {
-  font-size: 22px;
-  font-family: "TruenoSemiBold"; }
+  font-size: 22px; }
 
 .overlay span, .category-grid span {
   font-family: "TruenoRegular"; }
@@ -430,7 +432,8 @@ header {
       text-decoration: none;
       color: #313131;
       line-height: 55px;
-      font-size: 20px; }
+      font-size: 20px;
+      font-family: "TruenoRegular"; }
       header .left .logo .ico {
         height: 55px;
         width: 55px;
@@ -499,7 +502,8 @@ nav.main-menu {
       color: #fff;
       background: #f5a623;
       border-radius: 3px;
-      display: inline-block; }
+      display: inline-block;
+      font-family: "TruenoLight"; }
     .home-banner .overlay h1 {
       width: 85%;
       font-size: 54px;
@@ -532,9 +536,6 @@ nav.main-menu {
     width: 20px;
     float: right;
     margin-left: 85px; }
-  .btn-arrow:hover {
-    transition: all 0.2s;
-    background: #3a3a78; }
 
 input[type="submit"] {
   border: none; }
@@ -594,7 +595,6 @@ input[type="submit"] {
     border-bottom: solid 1px #f2f2f2;
     margin-bottom: 72px; }
   .category-wrap h2 {
-    font-size: 40px;
     display: block;
     text-align: center;
     margin-bottom: 95px; }
@@ -642,7 +642,28 @@ input[type="submit"] {
   border-radius: 3px;
   padding: 35px;
   box-sizing: border-box; }
-
+  .explore-wrap .explore-highlights .row .block .btn {
+    color: #fff;
+    display: block; }
+    .explore-wrap .explore-highlights .row .block .btn .ico {
+      fill: #fff; }
+  .explore-wrap .explore-highlights .row .block h6 {
+    font-size: 24px;
+    display: block;
+    margin-bottom: 15px;
+    font-family: "TruenoRegular";
+    color: #4a4a4a; }
+  .explore-wrap .explore-highlights .row .block p {
+    display: block;
+    margin-bottom: 25px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 20px;
+    color: #4a4a4a;
+    line-height: 34px; }
+  .explore-wrap .explore-highlights .row .block:after {
+    content: "";
+    display: block;
+    clear: both; }
 .explore-wrap .explore-highlights .row:first-child {
   display: flex;
   margin-bottom: 45px; }
@@ -653,11 +674,79 @@ input[type="submit"] {
       margin-right: 5%;
       border: solid 1px #8081b9;
       background: #f8f8fb; }
+      .explore-wrap .explore-highlights .row:first-child .block:first-child .btn {
+        background: #4a4b9b; }
+        .explore-wrap .explore-highlights .row:first-child .block:first-child .btn:hover {
+          transition: all 0.2s;
+          background: #3a3a78; }
     .explore-wrap .explore-highlights .row:first-child .block:last-child {
       margin-right: 0;
       border: solid 1px #a9ebe1;
       background: #f6fdfc; }
-
+      .explore-wrap .explore-highlights .row:first-child .block:last-child .btn {
+        background: #86e2d5; }
+        .explore-wrap .explore-highlights .row:first-child .block:last-child .btn:hover {
+          transition: all 0.2s;
+          background: #5dd8c7; }
 .explore-wrap .explore-highlights .row:last-child .block {
   border: solid 1px #f8c166;
   background: #fffcf6; }
+  .explore-wrap .explore-highlights .row:last-child .block .block__group {
+    width: 65%;
+    float: left; }
+  .explore-wrap .explore-highlights .row:last-child .block .btn {
+    background: #f5a623;
+    float: right; }
+    .explore-wrap .explore-highlights .row:last-child .block .btn:hover {
+      transition: all 0.2s;
+      background: #db8c0a; }
+
+.newsletter {
+  background: rgba(74, 75, 155, 0.1);
+  padding: 50px 0;
+  margin-top: 100px; }
+  .newsletter .left {
+    float: left;
+    margin-right: 115px; }
+    .newsletter .left span {
+      color: #9b9b9b;
+      font-size: 16px;
+      letter-spacing: 3px;
+      margin-bottom: 15px;
+      font-family: "TruenoRegular"; }
+    .newsletter .left h5 {
+      font-size: 28px;
+      color: #4a4a4a;
+      line-height: 40px;
+      font-family: "TruenoRegular"; }
+  .newsletter .right {
+    float: left; }
+    .newsletter .right form input[type="text"], .newsletter .right form button {
+      display: block;
+      border-radius: 2px;
+      width: 300px;
+      box-sizing: border-box; }
+    .newsletter .right form input[type="text"] {
+      border: solid 1px #4a4a4a;
+      font-family: "TruenoLight";
+      margin-bottom: 15px;
+      padding: 15px 20px; }
+    .newsletter .right form button {
+      position: relative;
+      background: #4a4b9b;
+      border: none;
+      font-family: "TruenoRegular";
+      color: #fff;
+      padding: 20px;
+      text-align: left; }
+      .newsletter .right form button .ico {
+        fill: #fff;
+        width: 20px;
+        height: 16px;
+        float: right; }
+  .newsletter:after {
+    content: "";
+    display: block;
+    clear: both; }
+
+/*# sourceMappingURL=hire-immigrants.css.map */
