--- a/wp-content/themes/HireImmigrants/sass/component/_banner.scss
+++ b/wp-content/themes/HireImmigrants/sass/component/_banner.scss
@@ -27,6 +27,7 @@
 			border-radius: 3px;
 			// margin-bottom: 10px;
 			display: inline-block;
+			font-family: $truenoLight;
 		}
 		h1{
 			width: 85%;
