--- a/wp-content/themes/HireImmigrants/sass/component/_newsletter.scss
+++ b/wp-content/themes/HireImmigrants/sass/component/_newsletter.scss
@@ -9,8 +9,9 @@
 			color: $dusty-gray;
 			font-size: 16px;
 			letter-spacing: 3px;
-			margin-bottom: 15px;
+			margin-bottom: 20px;
 			font-family: $truenoReg;
+			text-transform: uppercase;
 		}
 		h5{
 			font-size: 28px;
