--- a/wp-content/themes/HireImmigrants/sass/hire-immigrants.scss
+++ b/wp-content/themes/HireImmigrants/sass/hire-immigrants.scss
@@ -44,4 +44,5 @@
 @import "component/category-grid";
 @import "component/explore-highlights";
 @import "component/newsletter";
+@import "component/footer";
 // Trumps -- Overrides and helper classes
