--- a/wp-content/themes/HireImmigrants/sass/settings/_colours.scss
+++ b/wp-content/themes/HireImmigrants/sass/settings/_colours.scss
@@ -5,10 +5,13 @@ $alto: #dbdbdb;
 $bridal-heath: #fffcf6;
 $buttercup: #f5a623;
 $concrete: #f2f2f2;
+$deep-cerulean: #0077b5;
+$dodger-blue: #1da1f2;
 $dove-gray: #6e6e6e;
 $dusty-gray: #9b9b9b;
 $gray: #828282;
 $mine-shaft: #313131;
+$pizzaz: #ff9500;
 $polar: #f6fdfc;
 $rajah: #f8c166;
 $riptide: #86e2d5;
