--- a/wp-content/themes/HireImmigrants/sass/settings/_typography.scss
+++ b/wp-content/themes/HireImmigrants/sass/settings/_typography.scss
@@ -52,4 +52,10 @@ footer{
 			font-family: $georgia;
 		}
 	}
+	ul a{
+		font-family: $truenoReg;
+	}
+	.footer__bottom p{
+		font-family: $truenoLight;
+	}
 }
