--- a/wp-content/themes/HireImmigrants/sass/hire-immigrants.scss
+++ b/wp-content/themes/HireImmigrants/sass/hire-immigrants.scss
@@ -51,5 +51,6 @@
 @import "component/social";
 @import "component/page-header";
 @import "component/article-share";
+@import "component/article-related";
 @import "component/breadcrumbs";
 // Trumps -- Overrides and helper classes
