--- a/wp-content/themes/HireImmigrants/sass/hire-immigrants.scss
+++ b/wp-content/themes/HireImmigrants/sass/hire-immigrants.scss
@@ -52,5 +52,6 @@
 @import "component/page-header";
 @import "component/article-share";
 @import "component/article-related";
+@import "component/speakers";
 @import "component/breadcrumbs";
 // Trumps -- Overrides and helper classes
