--- a/wp-content/themes/HireImmigrants/sass/component/_article-group.scss
+++ b/wp-content/themes/HireImmigrants/sass/component/_article-group.scss
@@ -63,7 +63,7 @@
 	.post__group{
 		display: block;
 		margin-bottom: 24px;
-		a{
+		.post{
 			padding: 24px;
 			text-decoration: none;
 			color: $tundora;
@@ -76,6 +76,10 @@
 				display: block;
 				background-position: center;
 				background-size: cover;
+			}
+			a{
+				text-decoration: none;
+				color: $tundora;
 			}
 			&:not(:first-child) {
 			    
@@ -209,10 +213,74 @@
 				padding: 3px 10px;
 				text-transform: uppercase;
 			}
+			.organization{
+				border: solid 1px $gallery;
+				padding: 20px 25px;
+				margin-top: 5px;
+				margin-bottom: 25px;
+				display: inline-block;
+				border-radius: 2px;
+				font-size: 16px;
+				color: $tundora;
+			}
 			p{
 				font-size: 20px;
 				line-height: 34px;
 				display: block;
+			}
+			&:after{
+				content: "";
+				display: block;
+				clear: both;
+			}
+		}
+		&.post__group--videos{
+			.post{
+				.post__image{
+					position: relative;
+					img{
+						position: absolute;
+						top: 0;
+						right: 0;
+						bottom: 0;
+						left: 0;
+						margin: auto;
+					}
+				}
+				h4{
+					margin-bottom: 25px;
+				}
+				&:first-child{
+					width: 100%;
+					margin-right: 0;
+					.post__image img{
+						display: none;
+					}
+					.speaker{
+						float: left;
+						width: 49%;
+						&:first-child{
+							margin-right: 2%;
+						}
+					}
+				}
+				&:nth-child(n+2){
+					width: 49%;
+					margin-right: 2%;
+					.post__image{
+						margin-bottom: 30px;
+						height: 190px !important;
+					}
+					.speaker{
+						display: block;
+						float: none;
+						clear: both;
+						margin-bottom: 25px;
+					}
+				}
+				&:nth-child(3){
+					margin-right: 0;
+				}
 			}
 		}
 		&:after{
