--- a/wp-content/themes/HireImmigrants/sass/component/_article-group.scss
+++ b/wp-content/themes/HireImmigrants/sass/component/_article-group.scss
@@ -253,6 +253,9 @@
 				margin-right: 35px;
 				float: left;
 				line-height: 20px;
+				@include respond(screen-xs){
+					margin-bottom: 10px;
+				}
 			}
 			.country{
 				font-size: 16px;
@@ -328,14 +331,26 @@
 					.speaker{
 						float: left;
 						width: 49%;
+						@include respond(screen-xs){
+							width: 100%;
+							float: none;
+						}
 						&:first-child{
 							margin-right: 2%;
+							@include respond(screen-xs){
+								margin-right: 0;
+								margin-bottom: 25px;
+							}
 						}
 					}
 				}
 				&:nth-child(n+2){
 					width: 49%;
 					margin-right: 2%;
+					@include respond(screen-xs){
+						width: 100%;
+						margin-right: 0;
+					}
 					.post__image{
 						margin-bottom: 30px;
 						height: 190px !important;
