--- a/wp-content/themes/HireImmigrants/sass/component/_article-share.scss
+++ b/wp-content/themes/HireImmigrants/sass/component/_article-share.scss
@@ -14,6 +14,9 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		@include respond(screen-xs){
+			display: block;
+		}
 	}
 	&:after{
 		content: "";
