--- a/wp-content/themes/HireImmigrants/sass/component/_banner.scss
+++ b/wp-content/themes/HireImmigrants/sass/component/_banner.scss
@@ -9,7 +9,9 @@
 	}
 	img{
 		width: auto;
-		height: 100%;
+		height: auto;
+		min-height: 100%;
+		min-width: 100%;
 	}
 	.overlay{
 		position: absolute;
