--- a/wp-content/themes/HireImmigrants/sass/component/_speakers.scss
+++ b/wp-content/themes/HireImmigrants/sass/component/_speakers.scss
@@ -4,6 +4,10 @@
 	img{
 		float: left;
 		margin-right: 15px;
+		max-width: 48px;
+		max-height: 48px;
+		width: auto;
+		height: auto;
 	}
 	.speaker{
 		.speaker__info{
