--- a/wp-content/themes/HireImmigrants/sass/object/_article.scss
+++ b/wp-content/themes/HireImmigrants/sass/object/_article.scss
@@ -16,6 +16,9 @@
 		margin-bottom: 12px;
 		float: left;
 		margin-right: 25px;
+		@include respond(screen-xs){
+			font-size: 16px;
+		}
 	}
 	h1{
 		font-size: 48px;
@@ -25,6 +28,11 @@
 		margin: 0;
 		color: $tundora;
 		clear: both;
+		@include respond(screen-xs){
+			font-size: 24px;
+			line-height: 34px;
+			margin-bottom: 20px;
+		}
 	}
 	.post__info{
 		display: block;
@@ -84,6 +92,10 @@
 		padding-bottom: 95px;
 		border-bottom: solid 1px $gallery;
 		margin-bottom: 75px;
+		@include respond(screen-xs){
+			padding-bottom: 0;
+			margin-bottom: 40px;
+		}
 		p{
 			font-size: 20px;
 			font-family: $georgia;
