--- a/wp-content/themes/HireImmigrants/sass/trumps/_article-group.scss
+++ b/wp-content/themes/HireImmigrants/sass/trumps/_article-group.scss
@@ -6,6 +6,10 @@
 				margin-right: 2%;
 				padding: 36px;
 				box-sizing: border-box;
+				@include respond(screen-xs){
+					width: 100%;
+					margin-right: 0;
+				}
 				&:nth-child(3n + 3){
 					margin-right: 0;
 				}
@@ -21,6 +25,10 @@
 						height: auto;
 						display: block;
 						margin: 0 auto;
+						@include respond(screen-xs){
+							width: auto;
+							height: 100%;
+						}
 					}
 				}
 				h4{
